# Cat-VGG

./: .gitignore  Dockerfile  Makefile  Readme.md  docker-compose.yml  pyproject.toml  requirements.txt
tracking_server/: Dockerfile  run.sh
vgg/: data.py  partition_data.py  run.py
