[tool.poetry]
name = "vgg"
version = "0.1.0"
description = "VGG model from scratch"
authors = ["Tim de Klijn <timdeklijn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
tensorflow = "2.5"
Pillow = "^8.2.0"
scipy = "^1.6.3"

[tool.poetry.dev-dependencies]
python-language-server = {extras = ["all"], version = "^0.36.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
